  - lib/Net/DRI/Protocol/EPP/Extensions/NO/Result.pm: When parse() is now also called for a 'session' (login sequence), $oname is undef, and we set it to $otype to remove a perl warning.
  - lib/Net/DRI/Protocol/EPP/Extensions/NO.pm: Activated secDNS extensions
  - eg/epp_client_no.pl: added support for secDNS parameters
  - t/633norid_epp.t: added secDNS tests


0.96_06_tdw_01 2014-03-04 DEVELOPMENT RELEASE
!! Note, this is not an official release !!

See warning in 0.96_01: this version enables only EPP over TCP/TLS and IRIS DCHK over UDP,
other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this version, however EPP over HTTPS is working.

#### Core
= Transport/HTTP : allow for persistent connections (has_state=1) to replicate Transport/Socket behaviour
= Protocol/EPP/Connection : Better handling of disconnects
= Protocol/RRI/Connection : Better handling of disconnects
+ Logging : added options suppress_keepalive, trim_headers 
+ Logging/Files : added option format_filename 
+ Protocol/EPP : added nameserver method host_as_ns to build <domain:ns>ns1.test.com</..>, currently utilised by ES
+ Data/IDN : A new IDN object to try and make a common method of creating / parsing domains with IDNs. Requires Net::IDN::Encode
= EPP/Core/Contact : use $ns for namespace instead of 'contact', allowing external extensions to use the parser
+ Util : Added functions xml2perl and perl2xml to convert variable naming convention, requires Hash::KeyMorpher
#### ccTLDs
+ New EPP DRD added for ES (they also support a SOAP interface, but not implemented)
+ Nominet - Updated to Nominet Standard EPP (2013 patch)
+ IT - Various updates to their system in 2013
= BE - Enabled IDNs
= COZA - Fix contacts, fix registrar_balance, couple of other minor fixes
= Switch - Fix contacts
= SE - DRDs (and Extensions) renamed to IIS as this now supports *.se and .nu
= CentralNIC : removed obsolete extensions
= Eurid : Fix namespace issue in transfers